--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,1 +1,26 @@
-<p>news works!</p>
+<div class="row my-3">
+  <div class="col-xl-12">
+    <h2 class="text-center"><b>Berita Covid Indonesia</b></h2>
+    <div class="row mx-1 justify-content-center news">
+      <div class="col-xl-12" *ngFor='let new of news'>
+        <div class="card-deck row m-0">
+          <div class="p-3">
+            <div class="card-body">
+              <h2 class="nb"><a href="{{new.url}}" class="text-dark" target="_blank">{{new.title}}</a></h2>
+              <p class="text-dark">Oleh {{new.author}}</p>
+              <p class="card-text text-dark muted">{{new.publishedAt | date:'fullDate'}}</p>
+              <img src="{{new.urlToImage}}" alt="">
+              <p class="card-text text-dark text-left mt-3" [innerHtml]="new.content"></p>
+            </div>
+          </div>
+        </div>
+        <hr>
+      </div>
+  </div>
+</div>
+
+<style>
+  img {
+    max-width: 60%;
+  }
+</style>
