merapikan card dek

--- a/src/app/national/national.component.html
+++ b/src/app/national/national.component.html
@@ -1,39 +1,42 @@
-<div class="row">
+<div class="row fade-in">
   <div class="col-xl-12">
     <h3 class="text-center">Grafik Covid-19 di Indonesia</h3>
     <div class="row row-cols-1 row-cols-md-2 justify-content-center mt-5">
       <div class="col mb-4">
         <div class="card h-100">
-          <div class="card-body">
-            <h5 class="card-title text-center bold">Total terkonfirmasi</h5>
-            <p class="card-text"></p>
+          <div class="card-body text-center">
+            <h5 class="card-title bold my-3">Total terkonfirmasi</h5>
+            <p class="card-text">xx Orang</p>
           </div>
         </div>
       </div>
       <div class="col mb-4">
         <div class="card h-100">
-          <div class="card-body">
-            <h5 class="card-title text-center bold">Isolasi / dalam perawatan</h5>
-            <p class="card-text"></p>
+          <div class="card-body text-center">
+            <h5 class="card-title bold my-3">Isolasi / dalam perawatan</h5>
+            <p class="card-text">xx Orang</p>
           </div>
         </div>
       </div>
       <div class="col mb-4">
         <div class="card h-100">
-          <div class="card-body">
-            <h5 class="card-title text-center bold">Selesai isolasi / dalam perawatan</h5>
-            <p class="card-text"></p>
+          <div class="card-body text-center">
+            <h5 class="card-title bold my-3">Selesai isolasi / dalam perawatan</h5>
+            <p class="card-text">xx Orang</p>
           </div>
         </div>
       </div>
       <div class="col mb-4">
           <div class="card h-100">
-            <div class="card-body">
-              <h5 class="card-title text-center bold">Meninggal</h5>
-              <p class="card-text"></p>
+            <div class="card-body text-center">
+              <h5 class="card-title bold my-3">Meninggal</h5>
+              <p class="card-text">xx Orang</p>
             </div>
           </div>
         </div>
     </div>
   </div>
 </div>
+
+
+
