--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,7 +1,7 @@
-<div class="row my-3">
+<div class="row my-3 fade-in">
   <div class="col-xl-12">
     <h2 class="text-center"><b>Berita Covid Indonesia</b></h2>
-    <div class="row mx-1 justify-content-center news">
+    <div class="row mx-1 justify-content-center news fade-in">
       <div class="col-xl-12" *ngFor='let new of news'>
         <div class="card-deck row m-0">
           <div class="p-3">
