--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <div class="container">
   <div class="mt-5 mb-4">
-    <a routerLink="/news" class="nb pr-3"><b>Berita</b></a>
-    <a routerLink="/national" class="nb pr-3"><b>Covid Nasional</b></a>
+    <a routerLink="/national" class="nb pr-3"><b>Data Covid Nasional</b></a>
     <hr>
   </div>
   <router-outlet></router-outlet>
