--- a/src/app/national/national.component.html
+++ b/src/app/national/national.component.html
@@ -1,36 +1,36 @@
 <div class="row fade-in">
   <div class="col-xl-12">
-    <h3 class="text-center">Grafik Covid-19 di Indonesia</h3>
+    <h1 class="text-center">Dashboard Covid-19 di Indonesia</h1>
     <div class="row row-cols-1 row-cols-md-2 justify-content-center mt-5">
       <div class="col mb-4">
-        <div class="card h-100">
+        <div class="card">
           <div class="card-body text-center">
-            <h5 class="card-title bold my-3">Total terkonfirmasi</h5>
-            <p class="card-text">xx Orang</p>
+            <h5 class="card-title bold mb-3 font-weight-bold">Positif </h5>
+            <p class="card-text">{{confirmed}} Orang</p>
           </div>
         </div>
       </div>
       <div class="col mb-4">
-        <div class="card h-100">
+        <div class="card">
           <div class="card-body text-center">
-            <h5 class="card-title bold my-3">Isolasi / dalam perawatan</h5>
-            <p class="card-text">xx Orang</p>
+            <h5 class="card-title bold mb-3 font-weight-bold">Sembuh</h5>
+            <p class="card-text">{{recovered}} Orang</p>
           </div>
         </div>
       </div>
       <div class="col mb-4">
-        <div class="card h-100">
+        <div class="card">
           <div class="card-body text-center">
-            <h5 class="card-title bold my-3">Selesai isolasi / dalam perawatan</h5>
-            <p class="card-text">xx Orang</p>
+            <h5 class="card-title bold mb-3 font-weight-bold">Meninggal</h5>
+            <p class="card-text">{{deaths}} Orang</p>
           </div>
         </div>
       </div>
       <div class="col mb-4">
-          <div class="card h-100">
+          <div class="card">
             <div class="card-body text-center">
-              <h5 class="card-title bold my-3">Meninggal</h5>
-              <p class="card-text">xx Orang</p>
+              <h5 class="card-title bold mb-3 font-weight-bold">Dirawat</h5>
+              <p class="card-text">{{hospitalized}} Orang</p>
             </div>
           </div>
         </div>
