tambah fitur chart

--- a/src/app/national/national.component.html
+++ b/src/app/national/national.component.html
@@ -72,7 +72,14 @@
         </div>
       </div>
     </div>
-    <h4 class="mt-5">Grafik Berdasarkan Umur</h4>
+    <h4 class="mt-5">Grafik Berdasarkan Umur (Tahun)</h4>
+    <div class="col mb-4">
+      <div class="card">
+        <div class="card-body">
+          <canvas id="oldChart"></canvas>
+        </div>
+      </div>
+    </div>
 
   </div>
 </div>
