--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,14 @@
-<div class="container">
-  <div class="mt-5 mb-4">
-    <a routerLink="/national" class="nb pr-3"><b>Data Covid Nasional</b></a>
-    <hr>
+<div class="container-xl">
+  <div class="row justify-content-center">
+    <div class="col-xl-12">
+      <div class="mt-5 mb-4">
+        <a routerLink="/national" class="nb"><b>Data Covid Nasional</b></a>
+        <hr>
+      </div>
+    </div>
   </div>
   <router-outlet></router-outlet>
-
   <footer>
-    <p id="sticky-footer" class="mt-4">&copy; Copyright 2020 <a href="https://Randynetworks.club" class="nb"><b>Randynetworks</b></a> </p>
+    <p id="sticky-footer" class="mt-4 text-center">&copy; Copyright 2020 <a href="https://Randynetworks.club" class="nb"><b>Randynetworks</b></a> </p>
   </footer>
 </div>
