--- a/src/app/national/national.component.html
+++ b/src/app/national/national.component.html
@@ -1,88 +1,107 @@
 <div class="row fade-in">
   <div class="col-xl-12">
-    <div class="alert alert-success" role="alert">
-      <h4 class="alert-heading">Pengumuman</h4>
-      <p>Data Covid dibawah Tidak update secara realtime. Aplikasi Dashboard Covid-19 Hanya sebagai Project Perkuliahan.</p>
-      <hr>
-      <p class="mb-0">Jangan Lupa jaga kesehatan, Makan Makanan bergizi, dan tentunya Pakai Masker!</p>
+    <div class="row justify-content-center">
+      <div class="col-xl-6">
+        <div class="alert alert-success" role="alert">
+          <h4 class="alert-heading">Pengumuman</h4>
+          <p>
+            Data Covid dibawah Tidak update secara realtime. Aplikasi Dashboard
+            Covid-19 Hanya sebagai Project Perkuliahan.
+          </p>
+          <hr />
+          <p class="mb-0">
+            Jangan Lupa jaga kesehatan, Makan Makanan bergizi, dan tentunya
+            Pakai Masker!
+          </p>
+        </div>
+        <div class="text-center mt-5">
+          <h1>Dashboard Covid-19 <br />Di Jawa Barat</h1>
+          <h5>Data Update Tanggal, {{ updateCovid }}</h5>
+        </div>
+      </div>
     </div>
-    <div class="text-center mt-5">
-      <h1>Dashboard Covid-19 <br>Di Jawa Barat</h1>
-      <h5>Data Update Tanggal, {{updateCovid}}</h5>
-    </div>
-    <h4 class="mt-5">Statistik</h4>
-    <div class="row row-cols-1 row-cols-md-2 justify-content-center">
-      <div class="col mb-4">
-        <div class="card">
-          <div class="card-body text-center">
-            <h5 class="card-title bold mb-3 font-weight-bold">Positif </h5>
-            <p class="card-text">{{confirmed}} Orang</p>
+
+    <div class="row justify-content-center">
+      <div class="col-xl-8">
+        <h4 class="mt-5">Statistik</h4>
+        <div class="row row-cols-1 row-cols-md-2 justify-content-center">
+          <div class="col mb-4">
+            <div class="card">
+              <div class="card-body text-center">
+                <h5 class="card-title bold mb-3 font-weight-bold">Positif</h5>
+                <p class="card-text">{{ confirmed }} Orang</p>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="col mb-4">
-        <div class="card">
-          <div class="card-body text-center">
-            <h5 class="card-title bold mb-3 font-weight-bold">Sembuh</h5>
-            <p class="card-text">{{recovered}} Orang</p>
+          <div class="col mb-4">
+            <div class="card">
+              <div class="card-body text-center">
+                <h5 class="card-title bold mb-3 font-weight-bold">Sembuh</h5>
+                <p class="card-text">{{ recovered }} Orang</p>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="col mb-4">
-        <div class="card">
-          <div class="card-body text-center">
-            <h5 class="card-title bold mb-3 font-weight-bold">Meninggal</h5>
-            <p class="card-text">{{deaths}} Orang</p>
+          <div class="col mb-4">
+            <div class="card">
+              <div class="card-body text-center">
+                <h5 class="card-title bold mb-3 font-weight-bold">Meninggal</h5>
+                <p class="card-text">{{ deaths }} Orang</p>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="col mb-4">
-          <div class="card">
-            <div class="card-body text-center">
-              <h5 class="card-title bold mb-3 font-weight-bold">Dirawat</h5>
-              <p class="card-text">{{hospitalized}} Orang</p>
+          <div class="col mb-4">
+            <div class="card">
+              <div class="card-body text-center">
+                <h5 class="card-title bold mb-3 font-weight-bold">Dirawat</h5>
+                <p class="card-text">{{ hospitalized }} Orang</p>
+              </div>
             </div>
           </div>
         </div>
-    </div>
-    <h4 class="mt-5">Penambahan</h4>
-    <div class="row row-cols-1 row-cols-md-2 justify-content-center">
-      <div class="col mb-4">
-        <div class="card">
-          <div class="card-body text-center">
-            <h5 class="card-title bold mb-3 font-weight-bold">Positif </h5>
-            <p class="card-text">{{confirmsAdded}} Orang</p>
-          </div>
-        </div>
-      </div>
-      <div class="col mb-4">
-        <div class="card">
-          <div class="card-body text-center">
-            <h5 class="card-title bold mb-3 font-weight-bold">Sembuh</h5>
-            <p class="card-text">{{recoveredAdded}} Orang</p>
-          </div>
-        </div>
-      </div>
-      <div class="col mb-4">
-        <div class="card">
-          <div class="card-body text-center">
-            <h5 class="card-title bold mb-3 font-weight-bold">Meninggal</h5>
-            <p class="card-text">{{deathsAdded}} Orang</p>
-          </div>
-        </div>
       </div>
     </div>
-    <h4 class="mt-5">Grafik Berdasarkan Umur (Tahun)</h4>
-    <div class="col mb-4">
-      <div class="card">
-        <div class="card-body">
-          <canvas id="oldChart"></canvas>
+
+    <div class="row justify-content-center">
+      <div class="col-xl-10">
+        <h4 class="mt-5">Penambahan</h4>
+        <div class="row">
+          <div class="col mb-4">
+            <div class="card">
+              <div class="card-body text-center">
+                <h5 class="card-title bold mb-3 font-weight-bold">Positif</h5>
+                <p class="card-text">{{ confirmsAdded }} Orang</p>
+              </div>
+            </div>
+          </div>
+          <div class="col mb-4">
+            <div class="card">
+              <div class="card-body text-center">
+                <h5 class="card-title bold mb-3 font-weight-bold">Sembuh</h5>
+                <p class="card-text">{{ recoveredAdded }} Orang</p>
+              </div>
+            </div>
+          </div>
+          <div class="col mb-4">
+            <div class="card">
+              <div class="card-body text-center">
+                <h5 class="card-title bold mb-3 font-weight-bold">Meninggal</h5>
+                <p class="card-text">{{ deathsAdded }} Orang</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
 
+    <div class="row justify-content-center">
+      <div class="col-xl-6">
+        <h4 class="mt-5">Grafik Berdasarkan Umur (Tahun)</h4>
+        <div class="card">
+          <div class="card-body">
+            <canvas id="oldChart" role="img"></canvas>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
-
-
-
