--- a/src/app/national/national.component.html
+++ b/src/app/national/national.component.html
@@ -2,6 +2,12 @@
   <div class="col-xl-12">
     <div class="row justify-content-center">
       <div class="col-xl-6">
+        <div class="text-center mt-3">
+          <h1>Dashboard Covid-19 <br />Di Jawa Barat</h1>
+          <h5>Data Update Tanggal, {{ updateCovid }}</h5>
+        </div>
+      </div>
+      <div class="col-xl-12 mt-3">
         <div class="alert alert-success" role="alert">
           <h4 class="alert-heading">Pengumuman</h4>
           <p>
@@ -14,16 +20,12 @@
             Pakai Masker!
           </p>
         </div>
-        <div class="text-center mt-5">
-          <h1>Dashboard Covid-19 <br />Di Jawa Barat</h1>
-          <h5>Data Update Tanggal, {{ updateCovid }}</h5>
-        </div>
       </div>
     </div>
 
-    <div class="row justify-content-center">
+    <div class="row justify-content-center mt-3">
       <div class="col-xl-8">
-        <h4 class="mt-5">Statistik</h4>
+        <h4 class="">Statistik</h4>
         <div class="row row-cols-1 row-cols-md-2 justify-content-center">
           <div class="col mb-4">
             <div class="card">
@@ -59,11 +61,8 @@
           </div>
         </div>
       </div>
-    </div>
-
-    <div class="row justify-content-center">
-      <div class="col-xl-10">
-        <h4 class="mt-5">Penambahan</h4>
+      <div class="col-xl-4">
+        <h4 class="">Penambahan</h4>
         <div class="row">
           <div class="col mb-4">
             <div class="card">
@@ -95,13 +94,22 @@
 
     <div class="row justify-content-center">
       <div class="col-xl-6">
-        <h4 class="mt-5">Grafik Berdasarkan Umur (Tahun)</h4>
+        <h4 class="mt-3">Grafik Berdasarkan Umur (Tahun)</h4>
         <div class="card">
           <div class="card-body">
             <canvas id="oldChart" role="img"></canvas>
           </div>
         </div>
       </div>
+      <div class="col-xl-6">
+        <h4 class="mt-3">Grafik Berdasarkan Jenis Kelamin</h4>
+        <div class="card">
+          <div class="card-body">
+            <canvas id="jkChart" role="img"></canvas>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
+
