--- a/src/app/national/national.component.html
+++ b/src/app/national/national.component.html
@@ -24,11 +24,11 @@
     </div>
 
     <div class="row justify-content-center mt-3">
-      <div class="col-xl-8">
+      <div class="col-xl-9">
         <h4 class="">Statistik</h4>
         <div class="row row-cols-1 row-cols-md-2 justify-content-center">
           <div class="col mb-4">
-            <div class="card">
+            <div class="card bg-primary text-white">
               <div class="card-body text-center">
                 <h5 class="card-title bold mb-3 font-weight-bold">Positif</h5>
                 <p class="card-text">{{ confirmed }} Orang</p>
@@ -36,7 +36,7 @@
             </div>
           </div>
           <div class="col mb-4">
-            <div class="card">
+            <div class="card bg-warning text-white">
               <div class="card-body text-center">
                 <h5 class="card-title bold mb-3 font-weight-bold">Sembuh</h5>
                 <p class="card-text">{{ recovered }} Orang</p>
@@ -44,7 +44,7 @@
             </div>
           </div>
           <div class="col mb-4">
-            <div class="card">
+            <div class="card bg-danger text-white">
               <div class="card-body text-center">
                 <h5 class="card-title bold mb-3 font-weight-bold">Meninggal</h5>
                 <p class="card-text">{{ deaths }} Orang</p>
@@ -52,7 +52,7 @@
             </div>
           </div>
           <div class="col mb-4">
-            <div class="card">
+            <div class="card bg-secondary text-white">
               <div class="card-body text-center">
                 <h5 class="card-title bold mb-3 font-weight-bold">Dirawat</h5>
                 <p class="card-text">{{ hospitalized }} Orang</p>
@@ -61,11 +61,11 @@
           </div>
         </div>
       </div>
-      <div class="col-xl-4">
+      <div class="col-xl-3">
         <h4 class="">Penambahan</h4>
         <div class="row">
           <div class="col mb-4">
-            <div class="card">
+            <div class="card bg-info text-white">
               <div class="card-body text-center">
                 <h5 class="card-title bold mb-3 font-weight-bold">Positif</h5>
                 <p class="card-text">{{ confirmsAdded }} Orang</p>
@@ -73,7 +73,7 @@
             </div>
           </div>
           <div class="col mb-4">
-            <div class="card">
+            <div class="card bg-success text-white">
               <div class="card-body text-center">
                 <h5 class="card-title bold mb-3 font-weight-bold">Sembuh</h5>
                 <p class="card-text">{{ recoveredAdded }} Orang</p>
@@ -81,7 +81,7 @@
             </div>
           </div>
           <div class="col mb-4">
-            <div class="card">
+            <div class="card bg-danger text-white">
               <div class="card-body text-center">
                 <h5 class="card-title bold mb-3 font-weight-bold">Meninggal</h5>
                 <p class="card-text">{{ deathsAdded }} Orang</p>
@@ -95,7 +95,7 @@
     <div class="row justify-content-center">
       <div class="col-xl-6">
         <h4 class="mt-3">Grafik Berdasarkan Umur (Tahun)</h4>
-        <div class="card">
+        <div class="card border border-success">
           <div class="card-body">
             <canvas id="oldChart" role="img"></canvas>
           </div>
@@ -103,7 +103,7 @@
       </div>
       <div class="col-xl-6">
         <h4 class="mt-3">Grafik Berdasarkan Jenis Kelamin</h4>
-        <div class="card">
+        <div class="card border border-info">
           <div class="card-body">
             <canvas id="jkChart" role="img"></canvas>
           </div>
