--- a/src/app/national/national.component.html
+++ b/src/app/national/national.component.html
@@ -1,12 +1,25 @@
 <div class="row fade-in">
   <div class="col-xl-12">
+    <div class="row my-4 justify-content-center">
+      <div class="col-xl-4 text-center">
+        <img
+          src="https://64.media.tumblr.com/bc95cfa5ab29b1bbf6474456aae24e28/7040187b7d4ccdc2-45/s1280x1920/1e9d6d15abb248c74a07153064990d34735bf8a5.png"
+          alt="logo Ayoboga"
+          width="100px"
+        />
+      </div>
+    </div>
     <div class="row justify-content-center">
       <div class="col-xl-6">
-        <div class="text-center mt-4">
-          <h1>Dashboard Covid-19 <br />Di Jawa Barat</h1>
-          <h5>Data Update Tanggal, {{ updateCovid }}</h5>
+        <div class="text-center">
+          <b>
+            <h1>Dashboard Covid-19 <br />Di Jawa Barat</h1>
+            <h5>Data Update Tanggal, {{ updateCovid }}</h5>
+          </b>
         </div>
       </div>
+    </div>
+    <div class="row justify-content-center">
       <div class="col-xl-12 mt-3">
         <div class="alert alert-success" role="alert">
           <h4 class="alert-heading">Pengumuman</h4>
@@ -19,6 +32,67 @@
             Jangan Lupa jaga kesehatan, Makan Makanan bergizi, dan tentunya
             Pakai Masker!
           </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xl-3">
+        <a class="card pb-3 card-hover-helper" href="http://tel:119/">
+          <div class="card-body text-center">
+            <h5 class="card-title bold font-weight-bold">Call Center</h5>
+            <p>Nomor Darurat</p>
+            <p class="card-text">
+              <svg
+                width="1em"
+                height="1em"
+                viewBox="0 0 16 16"
+                class="bi bi-telephone-fill"
+                fill="currentColor"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M2.267.98a1.636 1.636 0 0 1 2.448.152l1.681 2.162c.309.396.418.913.296 1.4l-.513 2.053a.636.636 0 0 0 .167.604L8.65 9.654a.636.636 0 0 0 .604.167l2.052-.513a1.636 1.636 0 0 1 1.401.296l2.162 1.681c.777.604.849 1.753.153 2.448l-.97.97c-.693.693-1.73.998-2.697.658a17.47 17.47 0 0 1-6.571-4.144A17.47 17.47 0 0 1 .639 4.646c-.34-.967-.035-2.004.658-2.698l.97-.969z"
+                />
+              </svg>
+              119
+            </p>
+          </div>
+        </a>
+      </div>
+      <div class="col-xl-3">
+        <a
+          class="card pb-3 card-hover-helper"
+          href="https://wa.me/6285155317321"
+        >
+          <div class="card-body text-center">
+            <h5 class="card-title bold font-weight-bold">Hotline Ayoboga</h5>
+            <p class="card-text">Chat Seputar Covid-19</p>
+            <p class="card-text">
+              <em class="fab fa-whatsapp"></em> Klik Untuk Chat
+            </p>
+          </div>
+        </a>
+      </div>
+      <div class="col-xl-6">
+        <div class="card card-hover-helper">
+          <div class="card-body">
+            <div class="row justify-content-center">
+              <div class="col-xl-8">
+                <h5 class="card-title bold font-weight-bold">
+                  Ikuti perkembangan terkini seputar Covid-19 dengan mengikuti
+                  kanal sosial media kami.
+                </h5>
+              </div>
+              <div class="col-xl-4">
+                <span>
+                  <h1 href=""><i class="fab fa-lg fa-instagram"></i></h1>
+                  <h1 href=""><i class="fab fa-lg fa-twitter"></i></h1>
+                </span>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -153,7 +227,7 @@
       </div>
     </div>
 
-    <div class="row justify-content-center">
+    <div class="row justify-content-center mt-3">
       <div class="col-xl-6">
         <h4 class="mt-3">Grafik Berdasarkan Umur (Tahun)</h4>
         <div class="card border border-success">
@@ -169,6 +243,56 @@
             <canvas id="jkChart" role="img"></canvas>
           </div>
         </div>
+      </div>
+    </div>
+
+    <div class="row justify-content-center">
+      <div class="col-xl-12">
+        <div class="text-center mt-4">
+          <b>
+            <h4>Apa yang Harus Dilakukan ?</h4>
+          </b>
+        </div>
+      </div>
+      <div class="col-xl-6">
+        <img
+          src="https://firebasestorage.googleapis.com/v0/b/jabarprov-covid19.appspot.com/o/public%2Fkonten-covid-19.png?alt=media&token=c617647b-1812-49a7-b156-cb9a66fdf4e6"
+          alt=""
+        />
+      </div>
+      <div class="col-xl-6 pl-5">
+        <h3 class=""><b>Apa itu Covid-19 ?</b></h3>
+        <p>
+          COVID-19 adalah penyakit yang disebabkan oleh Novel Coronavirus
+          (2019-nCoV), jenis baru coronavirus yang pada manusia menyebabkan
+          penyakit mulai flu biasa hingga penyakit yang serius seperti Middle
+          East Respiratory Syndrome (MERS) dan Sindrom Pernapasan Akut Berat/
+          Severe Acute Respiratory Syndrome (SARS).<br /><br />Pada 11 Februari
+          2020, World Health Organization (WHO) mengumumkan nama penyakit yang
+          disebabkan 2019-nCov, yaitu <b>Coronavirus Disease (COVID-19)</b>.
+        </p>
+        <h3 class="mt-3"><b>Gejala</b></h3>
+        <p>
+          Gejala umum berupa demam ≥38°C, batuk kering, dan sesak napas. Jika
+          ada orang yang dalam 14 hari sebelum muncul gejala tersebut pernah
+          melakukan perjalanan ke negara terjangkit, atau pernah merawat/kontak
+          erat dengan penderita COVID-19, maka terhadap orang tersebut akan
+          dilakukan pemeriksaan laboratorium lebih lanjut untuk memastikan
+          diagnosisnya.
+        </p>
+        <h3 class="mt-3"><b>Penularan</b></h3>
+        <p>
+          Seseorang dapat terinfeksi dari penderita COVID-19. Penyakit ini dapat
+          menyebar melalui tetesan kecil (droplet) dari hidung atau mulut pada
+          saat batuk atau bersin. Droplet tersebut kemudian jatuh pada benda di
+          sekitarnya. Kemudian jika ada orang lain menyentuh benda yang sudah
+          terkontaminasi dengan droplet tersebut, lalu orang itu menyentuh mata,
+          hidung atau mulut (segitiga wajah), maka orang itu dapat terinfeksi
+          COVID-19. Seseorang juga bisa terinfeksi COVID-19 ketika tanpa sengaja
+          menghirup droplet dari penderita. Inilah sebabnya mengapa kita penting
+          untuk menjaga jarak hingga kurang lebih satu meter dari orang yang
+          sakit.
+        </p>
       </div>
     </div>
   </div>
