--- a/src/app/national/national.component.html
+++ b/src/app/national/national.component.html
@@ -295,5 +295,72 @@
         </p>
       </div>
     </div>
+
+    <div class="row mt-3">
+      <div class="col-xl-8">
+        <h4>Info Praktikal</h4>
+        <div class="card p-4">
+          <table>
+            <tbody>
+              <tr>
+                <td>Cuci Masker Kain dengan Benar</td>
+                <td>
+                  <a class="icon"><i class="fas fa-download"> Unduh</i></a>
+                </td>
+                <td>
+                  <a class="icon"><i class="fas fa-share-alt"> Bagikan</i></a>
+                </td>
+              </tr>
+              <tr>
+                <td>Ventilasi Udara Baik, Cegah Covid-19</td>
+                <td>
+                  <a class="icon"><i class="fas fa-download"> Unduh</i></a>
+                </td>
+                <td>
+                  <a class="icon"><i class="fas fa-share-alt"> Bagikan</i></a>
+                </td>
+              </tr>
+              <tr>
+                <td>Jangan Kendor 3M, Waspada Klaster Keluarga</td>
+                <td>
+                  <a class="icon"><i class="fas fa-download"> Unduh</i></a>
+                </td>
+                <td>
+                  <a class="icon"><i class="fas fa-share-alt"> Bagikan</i></a>
+                </td>
+              </tr>
+              <tr>
+                <td>7 Poin Penting Saat Pakai Masker</td>
+                <td>
+                  <a class="icon"><i class="fas fa-download"> Unduh</i></a>
+                </td>
+                <td>
+                  <a class="icon"><i class="fas fa-share-alt"> Bagikan</i></a>
+                </td>
+              </tr>
+              <tr>
+                <td>Ketersediaan & Keterisian Tempat Tidur</td>
+                <td>
+                  <a class="icon"><i class="fas fa-download"> Unduh</i></a>
+                </td>
+                <td>
+                  <a class="icon"><i class="fas fa-share-alt"> Bagikan</i></a>
+                </td>
+              </tr>
+              <tr>
+                <td>Begini Jenis Risiko Kegiatan di Tempat Kerja</td>
+                <td>
+                  <a class="icon"><i class="fas fa-download"> Unduh</i></a>
+                </td>
+                <td>
+                  <a class="icon"><i class="fas fa-share-alt"> Bagikan</i></a>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <div class="col-xl-6"></div>
+    </div>
   </div>
 </div>
