--- a/src/app/national/national.component.html
+++ b/src/app/national/national.component.html
@@ -360,7 +360,33 @@
           </table>
         </div>
       </div>
-      <div class="col-xl-6"></div>
+      <div class="col-xl-4">
+        <h4>RS Rujukan Covid-19</h4>
+          <div class="card">
+            <table class="table table-hover">
+              <thead>
+                <tr>
+                  <th scope="col">Nama RS</th>
+                  <th scope="col">Alamat</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">RSU Dr. Hasan Sadikin</th>
+                  <td>Jl. Pasteur No. 38, Kota Bandung</td>
+                </tr>
+                <tr>
+                  <th scope="row">RSTP Dr. H. A. Rotinsulu</th>
+                  <td>Jl. Bukit Jarian No.40, Hegarmanah, Kota Bandung</td>
+                </tr>
+                <tr>
+                  <th scope="row">RSAU Dr. M. Salamun Bandung</th>
+                  <td colspan="2">Jl. Ciumbuleuit No.203, Kota Bandung</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+      </div>
     </div>
   </div>
 </div>
